Remove reference to new sda feature flag and update application routing and ccms data service